--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="banner grid-container">
+            <div class="banner-content">
+                <h1>The Greatest Soccer Show On The Earth.</h1>
+                <p class="banner-text">The FIFA World Cup, often simply called the World Cup, is an international
+                    association football
+                    competition contested by the senior men's national teams of the members of the Federation
+                    Internationale de Football Association (FIFA), the sport's global governing body.</p>
+                <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <div class="banner-content">
+                <img src="images/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
