banner section update blog and footer section added

--- a/index.html
+++ b/index.html
@@ -14,20 +14,146 @@
 
 <body>
     <header class="header">
-        <div class="banner grid-container">
+        <div class="banner">
             <div class="banner-content">
-                <h1>The Greatest Soccer Show On The Earth.</h1>
-                <p class="banner-text">The FIFA World Cup, often simply called the World Cup, is an international
-                    association football
-                    competition contested by the senior men's national teams of the members of the Federation
-                    Internationale de Football Association (FIFA), the sport's global governing body.</p>
-                <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                <div class="left-content">
+                    <h1>The greatest football show in the world.</h1>
+                    <p>
+                        The FIFA World Cup, often simply called the World Cup, is an international association football
+                        competition contested by the senior men's national teams of the members of the Fédération
+                        Internationale de Football Association, the sport's global governing body
+                    </p>
+                    <p><a href="" class="banner-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></a></p>
+                </div>
             </div>
             <div class="banner-content">
                 <img src="images/Banner Image.png" alt="">
             </div>
         </div>
     </header>
+    <main>
+        <section class="blog">
+            <div class="flex-container">
+                <div class="navigagion">
+                    <nav>
+                        <ul>
+                            <li><a href="">Upcomming Match</a></li>
+                            <li><a href="">All Group</a></li>
+                            <li id="active"><a href="" id="active-color">Blog</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="blogs">
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                    <div class="blog-parents">
+                        <div class="blog-thumbnail">
+                            <img src="images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <a href="">Transfer</a>
+                            <h4>
+                                Transfer Live: Brazil vs Argentina from oval.
+                            </h4>
+                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-message"></i>23</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-parents">
+            <div class="top-footer">
+                <h1>GOAL</h1>
+            </div>
+            <hr>
+            <div class="bottom-footer">
+                <div>
+                    <a href="">Contact Us</a>
+                </div>
+                <div>
+                    <a href="">Terms & Service</a>
+                </div>
+                <div>
+                    <a href="">Privacy Policy</a>
+                </div>
+                <div>
+                    <a href="">Privacy Settings</a>
+                </div>
+                <div>
+                    <a href="">Goal App</a>
+                </div>
+                <div>
+                    <a href="">Goal Live</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
