match.html file added and all file update

--- a/match.html
+++ b/match.html
@@ -32,109 +32,142 @@
         </div>
     </header>
     <main>
-        <!-- blog section start -->
         <section class="blog">
             <div class="flex-container">
                 <div class="navigagion">
                     <nav>
                         <ul>
-                            <li><a href="match.html">Upcomming Match</a></li>
+                            <li id="active"><a href="match.html" id="active-color">Upcomming Match</a></li>
                             <li><a href="">All Group</a></li>
-                            <li id="active"><a href="index.html" id="active-color">Blog</a></li>
+                            <li><a href="index.html">Blog</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="blogs">
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
-                        <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                        <div class="flag">
+                            <div>
+                                <img src="images/Flag.png" alt="">
+                            </div>
+                            <div>
+                                <span>VS</span>
+                            </div>
+                            <div>
+                                <img src="images/germany Flag.png" alt="">
+                            </div>
                         </div>
                         <div class="blog-details">
-                            <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Germany VS Frnace
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
-                            <span><i class="fa-solid fa-message"></i>23</span>
+                            <span>01 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="view-btn">
-            <div>
-                <a href="">View All</a>
-            </div>
-        </section>
-        <!-- blog section end -->
-
     </main>
-    <!-- footer start -->
     <footer class="footer">
         <div class="footer-parents">
             <div class="top-footer">
@@ -163,7 +196,6 @@
             </div>
         </div>
     </footer>
-    <!-- footer end -->
 </body>
 
 </html>
