team name and flag updated

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <nav>
                         <ul>
                             <li><a href="match.html">Upcomming Match</a></li>
-                            <li><a href="">All Group</a></li>
-                            <li id="active"><a href="index.html" id="active-color">Blog</a></li>
+                            <li><a href="">All Groups</a></li>
+                            <li id="active"><a href="index.html" id="active-color">Blogs</a></li>
                         </ul>
                     </nav>
                 </div>
