--- a/match.html
+++ b/match.html
@@ -58,50 +58,50 @@
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                France VS Germany
                             </h4>
-                            <span>01 Apr 23</span>
+                            <span>22 Apr 23</span>
                             <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="flag">
                             <div>
-                                <img src="images/Flag.png" alt="">
+                                <img src="images/argentina.png" alt="">
                             </div>
                             <div>
                                 <span>VS</span>
                             </div>
                             <div>
-                                <img src="images/germany Flag.png" alt="">
+                                <img src="images/brazil.png" alt="">
                             </div>
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                Argentina VS Brazil
                             </h4>
-                            <span>01 Apr 23</span>
+                            <span>24 Apr 23</span>
                             <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="flag">
                             <div>
-                                <img src="images/Flag.png" alt="">
+                                <img src="images/portugal.png" alt="">
                             </div>
                             <div>
                                 <span>VS</span>
                             </div>
                             <div>
-                                <img src="images/germany Flag.png" alt="">
+                                <img src="images/italy.png" alt="">
                             </div>
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                Portugal VS Italy
                             </h4>
-                            <span>01 Apr 23</span>
-                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
+                            <span>25 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>2.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
