team name and flag update2

--- a/match.html
+++ b/match.html
@@ -107,18 +107,18 @@
                     <div class="blog-parents">
                         <div class="flag">
                             <div>
-                                <img src="images/Flag.png" alt="">
+                                <img src="images/span.png" alt="">
                             </div>
                             <div>
                                 <span>VS</span>
                             </div>
                             <div>
-                                <img src="images/germany Flag.png" alt="">
+                                <img src="images/netherland.png" alt="">
                             </div>
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                Span VS Netherland
                             </h4>
                             <span>01 Apr 23</span>
                             <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
@@ -127,41 +127,41 @@
                     <div class="blog-parents">
                         <div class="flag">
                             <div>
-                                <img src="images/Flag.png" alt="">
+                                <img src="images/belgium.png" alt="">
                             </div>
                             <div>
                                 <span>VS</span>
                             </div>
                             <div>
-                                <img src="images/germany Flag.png" alt="">
+                                <img src="images/senegal.png" alt="">
                             </div>
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                Belgium VS Senegal
                             </h4>
-                            <span>01 Apr 23</span>
+                            <span>24 Apr 23</span>
                             <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="flag">
                             <div>
-                                <img src="images/Flag.png" alt="">
+                                <img src="images/japan.png" alt="">
                             </div>
                             <div>
                                 <span>VS</span>
                             </div>
                             <div>
-                                <img src="images/germany Flag.png" alt="">
+                                <img src="images/australia.png" alt="">
                             </div>
                         </div>
                         <div class="blog-details">
                             <h4>
-                                Germany VS Frnace
+                                Japan VS Australia
                             </h4>
-                            <span>01 Apr 23</span>
-                            <span><i class="fa-solid fa-clock"></i>1.00 AM</span>
+                            <span>25 Apr 23</span>
+                            <span><i class="fa-solid fa-clock"></i>3.00 AM</span>
                         </div>
                     </div>
                 </div>
