blog image and final update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         competition contested by the senior men's national teams of the members of the Fédération
                         Internationale de Football Association, the sport's global governing body
                     </p>
-                    <p><a href="" class="banner-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></a></p>
+                    <p><a href="#live" class="banner-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></a></p>
                 </div>
             </div>
             <div class="banner-content">
@@ -44,82 +44,82 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="blogs">
+                <div class="blogs" id="live">
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/fra-ger.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: France vs Germany from Al Bayt Stadium.
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>180 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/bra-arg.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: Brazil vs Argentina from Khalifa International Stadium.
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>181 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/port-italy.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: Portugal vs Italy from Al Janoub Stadium.
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>182 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/span-ned.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: Span vs Netherland from Lusail Stadium .
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>183 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/bel-sen.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: Belgium vs Senegal from Khalifa International Stadium.
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>184 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
                     <div class="blog-parents">
                         <div class="blog-thumbnail">
-                            <img src="images/Blog Image.png" alt="">
+                            <img src="images/jap-aus.jpg" alt="">
                         </div>
                         <div class="blog-details">
                             <a href="">Transfer</a>
                             <h4>
-                                Transfer Live: Brazil vs Argentina from oval.
+                                Transfer Live: Japan vs Australia from Education City Stadium.
                             </h4>
-                            <span><i class="fa-solid fa-clock"></i>10h</span>
+                            <span><i class="fa-solid fa-clock"></i>185 Day</span>
                             <span><i class="fa-solid fa-message"></i>23</span>
                         </div>
                     </div>
