--- a/match.html
+++ b/match.html
@@ -23,7 +23,8 @@
                         competition contested by the senior men's national teams of the members of the Fédération
                         Internationale de Football Association, the sport's global governing body
                     </p>
-                    <p><a href="" class="banner-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></a></p>
+                    <p><a href="index.html#live" class="banner-btn">Watch Live <i
+                                class="fa-solid fa-chevron-right"></i></a></p>
                 </div>
             </div>
             <div class="banner-content">
